plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/hmppLibAndConsumer/lib-and-app/lib/src/jvmMain/kotlin/LibJvmMain.kt.after
package com.h0tk3y.hmpp.klib.demo

fun <!LINE_MARKER!>main<!>() {
    libCommonMainTopLevelFun()
}